--- a/front/style.css
+++ b/front/style.css
@@ -19,9 +19,19 @@ body {
   align-content: space-between;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  background-color: rgb(251, 208, 255);
+  background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Stylized_uwu_emoticon.svg/2880px-Stylized_uwu_emoticon.svg.png);
+  background-position: center;
+  background-size: 120%;
 }
+
+h1 {
+  color: white;
+  -webkit-text-stroke: 1px red;
+} 
+
 .messages_border {
-  width: 50vh;
+  width: 100%;
 }
 
 div.full-height {
@@ -52,10 +62,12 @@ main .top-space {
 }
 
 .message {
-  width: 60%;
+  width: 50%;
   padding: 12px 18px;
-  border-radius: 6px;
-  border: solid 1px #bbb;
+  border-radius: 12px;
+  color: white;
+  background-color: pink;
+  border: solid 1px rgb(253, 0, 224);
   margin-bottom: 18px;
 }
 
@@ -66,7 +78,21 @@ main .top-space {
 }
 
 .message span {
-  font-size: small;
+  left: 50%;
+}
+
+.send {
+  position: relative;
+  left: 50%;
+}
+.dateMessage{
+margin-left: 5px;
+}
+
+.bouton {
+  color: white;
+  background-color: rgb(255, 0, 132);
+
 }
 
 /* FORM */
@@ -95,3 +121,4 @@ input {
 input[type='submit'] {
   padding: 2px;
 }
+
